[package]
name = "quetta"
version = "0.1.0"
authors = ["SpacialCircumstances"]
edition = "2018"
license = "MIT"
description = "Immutable, reference-counted strings for rust"
readme = "README.md"
repository = "https://github.com/SpacialCircumstances/quetta"
keywords = ["strings", "text"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
